--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,7 +7,7 @@
 # [![Readme Workflow](https://github.com/rolehippie/volume/actions/workflows/readme.yml/badge.svg)](https://github.com/rolehippie/volume/actions/workflows/readme.yml)
 # [![Galaxy Workflow](https://github.com/rolehippie/volume/actions/workflows/galaxy.yml/badge.svg)](https://github.com/rolehippie/volume/actions/workflows/galaxy.yml)
 # [![License: Apache-2.0](https://img.shields.io/github/license/rolehippie/volume)](https://github.com/rolehippie/volume/blob/master/LICENSE)
-# [![Ansible Role](https://img.shields.io/ansible/role/51442)](https://galaxy.ansible.com/rolehippie/volume)
+# [![Ansible Role](https://img.shields.io/badge/role-rolehippie.volume-blue)](https://galaxy.ansible.com/rolehippie/volume)
 #
 # Ansible role to format and mount disks/volumes.
 #
