Add support for partition table labels (msdos or gpt) in tasks configuration

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,6 +5,7 @@
 #   - name: mysql
 #     number: 1
 #     path: /var/lib/mysql
+#     label: msdos
 #     filesystem: ext4
 #     device: /dev/sdb
 #     options:
@@ -14,6 +15,7 @@
 #   - name: foobar
 #     number: 1
 #     path: /var/lib/foobar
+#     label: gpt
 #     filesystem: ext4
 #     device: /dev/sdc
 #     state: present
