--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,6 +15,8 @@
   community.general.parted:
     device: "{{ item.device }}"
     number: "{{ item.number }}"
+    label: "{{ item.label | default('msdos') }}"
+    name: "{% if item.label == 'gpt' %}GPT{% endif %}"
     flags: "{{ item.flags | default([]) }}"
     state: "{{ item.state | default('present') }}"
     part_start: "{{ item.part_start | default('0%') }}"
