--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,6 +15,8 @@
   community.general.parted:
     device: "{{ item.device }}"
     number: "{{ item.number }}"
+    label: "{{ omit if item.label is undefined else item.label }}"
+    name: "{{ 'GPT' if item.label == 'gpt' else omit }}"
     flags: "{{ item.flags | default([]) }}"
     state: "{{ item.state | default('present') }}"
     part_start: "{{ item.part_start | default('0%') }}"
